--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="sobrenos.html">SOBRE NÓS</a></li>
 				<li><a href="reciclagem.html">RECICLAGEM</a></li>
-				<li><a href="membros.html">Membros</a></li>
+				<li><a href="membros.html">MEMBROS</a></li>
 			</ul>
 		</div>
 		<img src="imgs/mapa-guaianazes.jpg" id="mapa">
