--- a/sobrenos.html
+++ b/sobrenos.html
@@ -12,9 +12,8 @@
 				<li><a href="#"><h1><span>LOLIUM</span></h1></a></li>
 				<li><a href="index.html">HOME</a></li>
 				<li><a href="sobrenos.html">SOBRE NÓS</a></li>
-				<li><a href="#">CONTATO</a></li>
 				<li><a href="reciclagem.html">RECICLAGEM</a></li>
-				<li><a href="#">MEMBROS</a></li>
+				<li><a href="membros.html">MEMBROS</a></li>
 			</ul>
 		</div>
 		<p>sobrenos</p>
