--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<div id="menu">
-			<ul>
-				<li><a href="#"><h1><span>LOLIUM</span></h1></a></li>
-				<li><a href="index.html">HOME</a></li>
-				<li><a href="sobrenos.html">SOBRE NÓS</a></li>
-				<li><a href="reciclagem.html">RECICLAGEM</a></li>
-				<li><a href="membros.html">MEMBROS</a></li>
-			</ul>
-		</div>
+		<header class="header">
+			<a href="#">LOLIUM</a>
+			<nav>
+				<ul class="menu">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="sobrenos.html">SOBRE NÓS</a></li>
+					<li><a href="reciclagem.html">RECICLAGEM</a></li>
+					<li><a href="membros.html">MEMBROS</a></li>
+				</ul>
+				</nav>
+			</header>
 		<img src="imgs/mapa-guaianazes.jpg" id="mapa">
 		<div id="texto">
-			<h2>Guaianases</h2><br>
+			<h1>Guaianases</h1><br>
 			<p>A origem do bairro de Guaianases, localizado na Zona Leste da cidade de São Paulo e conhecido pela situação precária em que vive sua população, é a mesma de Itaquera, região que apresenta os mesmo problemas. Os dois bairros surgiram como aldeias indígenas nas quais os jesuítas esforçavam-se para catequizar os nativos. Até o ano de 1920, o processo de aldeamento prosseguiu e foi finalizado com a extinção completa dos índios na região. Assim, as terras foram repassadas como propriedades particulares para os brancos.</p><br>
 			<p>Inicialmente, a região de Guaianases era utilizada como pousada e parada para os viajantes. Como forma de homenagear a Santa Cruz do Lajeado, uma igreja foi construída na área. De forma gradual e apresentando um lento progresso durante os anos, foram construídas diversas olarias nas imediações devido à chegada da Estrada de Ferro Norte. Na década de 40, Guaianases tornou-se mais populosa, recebendo seu nome de forma oficial no ano de 1948. Isso ocorreu, pois, Guaianases era o nome da tribo que habitava o bairro. Na época, a região era considerada como um “bairro-dormitório”, devido à falta de indústrias e comércio local.</p><br>
 			<h2>Nosso objetivo</h2><br>
