--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,7 +4,7 @@
 		<title>Sobre nós</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="imgs/favicon.ico"/>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/nos_style.css">
 	</head>
 	<body>
 		<div id="menu">
@@ -16,7 +16,15 @@
 				<li><a href="membros.html">MEMBROS</a></li>
 			</ul>
 		</div>
-		<p>sobrenos</p>
+		<div id="texto">
+			<h2>Quem nós somos?</h2><br>
+			<p>Somos o grupo Lolium, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
 		<footer>
 			<p>&copy; Copyright Lolium. All rights reserved. </p>
 		</footer>
